# InvoiceBuddy

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
InvoiceBuddy/: __main__.py  email_manager.py  flask_manager.py  globals.py  sample-config.json
InvoiceBuddy/static/: main.css
InvoiceBuddy/templates/: base.html  closed_trades.html  index.html  invoice_form.html  invoice_list.html  invoice_template.html  items.html  past_invoices.html  past_proposals.html  proposal_list.html  proposal_template.html  stats.html
InvoiceBuddy/templates/modals/: new_proposal_modal.html
