[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "InvoiceBuddy"
version = "0.0.1"
authors = [
    { name = "Joe Zeitouny", email = "joezeitouny@gmail.com" },
]
description = "Helps with generating invoices and proposals for freelancers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyobjc ~= 9.0.1;sys_platform == 'darwin'",
    "Events ~= 0.4",
    "rich ~= 13.3.1",
    "playsound ~= 1.3.0",
    "yagmail ~= 0.15.293",
    "keyring ~= 23.13.1",
    "Flask ~= 2.2.3",
    "pybit ~= 5.5.0",
    "keyrings.alt",
    "numpy",
    "scipy ~= 1.11.1",
    "pandas",
    "plotly"
]
[project.urls]
"Homepage" = "https://invoicebuddy.site"
"Bug Tracker" = "https://github.com/joezeitouny/InvoiceBuddy/issues"